Fix collapse navbar on click for smaller resolutions

--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,7 @@ section {
 
 .bold-subtitle {
     font-weight: 300;
+    font-size: 18px;
 }
 
 .bold {
@@ -583,7 +584,7 @@ textarea:focus {
     }
 
     .bold-subtitle {
-        font-size: 18px;
+        font-size: 16px;
     }
     .bold {
         font-size: 45px;
@@ -647,10 +648,6 @@ textarea:focus {
     }
     .stacked-text {
         font-size: 15px;
-    }
-
-    .bold-subtitle {
-        font-size: 18px;
     }
     
     .bold-welcome {
